test/compile_errors/stage1/obj/src_outside_function.zig
comptime {
    @src();
}

// @src outside function
//
// tmp.zig:2:5: error: @src outside function
